INITAL Commit on this branch

--- a/src/Views/About.html
+++ b/src/Views/About.html
@@ -1,7 +1,9 @@
 <div>
+    $include('../Components/Header.html')
     <h1>About</h1>
     <div>
         <p>First Name: {{name}}</p>
         <p>Last Name: {{family}}</p>
     </div>
+    $include('./Home.html')
 </div>
